2015-12-21  Patrick Eriksson  <patrick.eriksson@chalmers.se>

	* Several tweaks and bug fixes. For example, hand-picked spectro
	data had no effect.

2015-12-21  Patrick Eriksson  <patrick.eriksson@chalmers.se>

	* Some kind of revised version. Basic usage of logdata and l1b
	data now in place. Old Q structure removed, and O renamed to Q.

2015-12-18  Patrick Eriksson  <patrick.eriksson@chalmers.se>

	* Mscripts_database/q2_get_atm.m: Updated to use LOG, and now
	handling WebApi.

2015-12-18  Patrick Eriksson  <patrick.eriksson@chalmers.se>

	* Updated and cleaned. This version works with arts-2-3-395, and
	used the dummy L1B format. This to a have clean point for
	switching to use real L1B etc.

2015-12-18  Patrick Eriksson  <patrick.eriksson@chalmers.se>

	* Mscripts_qsystem/q2_create_workfolder.m:
	* Mscripts_qsystem/q2_init.m:
	* Mscripts_qsystem/q2_check_q.m:
	* Mscripts_qsystem/q2_set_path.m: Removed off-line option and
	report string r.

	* Mscripts_database/q2_find_donaletty.m: Moved to this folder.

	* Mscripts_database/q2_get_atm.m: Just marked slots for WebApi.

2015-12-17  Patrick Eriksson  <patrick.eriksson@chalmers.se>

	* Mscripts_database/l1b_crop.m: New.

	* Mscripts_database/l1b_frequency.m: New.

	* l1b_demo.m: A temporary script for testing.

	* Mscripts_qsystem/q2_set_path.m:
	* Mscripts_qsystem/q2_init.m: Adopted to removed folder.

	* Mscripts_offline: Removed this empty folder.

2015-12-15  Patrick Eriksson  <patrick.eriksson@chalmers.se>

	* Mscripts_arts/q2_arts_sensor_parts.m (q2_arts_sensor_parts):
	* Mscripts_arts/q2_artscfile_sensor.m (q2_artscfile_sensor): Added
	handling of F_GRID_NFILL.

	* .gitignore: Added.

	* Settings/p_std.m (p_std): Made HITRAN frequency range a bit narrower.

	* Settings/o_std.m: Added frequency limits to most ABS_SPECIES,
	and some fine tuning of abs table variables. Added O.F_GRID_NFILL.

	* Mscripts_qsystem/q2_pgrid.m: Changed to 400 m spacing for p_grid.
